--- a/package.json
+++ b/package.json
@@ -1,9 +1,36 @@
 {
+  "nyc": {
+    "exclude": [
+      "apis"
+    ]
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "async": "2.6.0",
     "google-auth-library": "0.12.0",
-    "string-template": "1.0.0"
+    "string-template": "1.0.0",
+    "@types/minimist": "1.2.0",
+    "@types/mkdirp": "0.5.1",
+    "@types/mocha": "2.2.44",
+    "@types/node": "8.0.53",
+    "del-cli": "1.1.0",
+    "gts": "0.5.1",
+    "ink-docstrap": "1.3.2",
+    "intelli-espower-loader": "1.0.1",
+    "js-beautify": "1.7.4",
+    "jsdoc": "3.5.5",
+    "minimist": "1.2.0",
+    "mkdirp": "0.5.1",
+    "mocha": "4.0.1",
+    "nock": "9.1.0",
+    "nyc": "11.3.0",
+    "opn": "5.1.0",
+    "power-assert": "1.4.4",
+    "rimraf": "2.6.2",
+    "semistandard": "11.0.0",
+    "source-map-support": "0.5.0",
+    "swig": "1.4.2",
+    "typescript": "2.6.1"
   },
   "semistandard": {
     "ignore": [
@@ -80,29 +107,5 @@
   "main": "./lib/googleapis.js",
   "engines": {
     "node": ">=4.0"
-  },
-  "devDependencies": {
-    "@types/minimist": "1.2.0",
-    "@types/mkdirp": "0.5.1",
-    "@types/mocha": "2.2.44",
-    "@types/node": "8.0.53",
-    "del-cli": "1.1.0",
-    "gts": "0.5.1",
-    "ink-docstrap": "1.3.2",
-    "intelli-espower-loader": "1.0.1",
-    "js-beautify": "1.7.4",
-    "jsdoc": "3.5.5",
-    "minimist": "1.2.0",
-    "mkdirp": "0.5.1",
-    "mocha": "4.0.1",
-    "nock": "9.1.0",
-    "nyc": "11.3.0",
-    "opn": "5.1.0",
-    "power-assert": "1.4.4",
-    "rimraf": "2.6.2",
-    "semistandard": "11.0.0",
-    "source-map-support": "0.5.0",
-    "swig": "1.4.2",
-    "typescript": "2.6.1"
   }
 }
