--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "async": "2.6.0",
-    "google-auth-library": "0.12.0",
+    "google-auth-library": "readdle/google-auth-library-nodejs.git#v0.13.3",
     "string-template": "1.0.0"
   },
   "semistandard": {
